Closed Bug 475193 Opened 15 years ago Closed 15 years ago

"ASSERTION: SVG frame expected" with marker property in HTML

Categories

(Core :: SVG, defect, P2)

x86
macOS
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: assertion, testcase, verified1.9.1)

Attachments

(2 files)

###!!! ASSERTION: SVG frame expected: 'mFrame->IsFrameOfType(nsIFrame::eSVG)', file /Users/jruderman/central/layout/svg/base/src/nsSVGEffects.cpp, line 224
Attached file testcase
Attached patch patchSplinter Review
Assignee: nobody → longsonr
Attachment #358659 - Flags: superreview?(roc)
Attachment #358659 - Flags: review?(roc)
Attachment #358659 - Flags: superreview?(roc)
Attachment #358659 - Flags: superreview+
Attachment #358659 - Flags: review?(roc)
Attachment #358659 - Flags: review+
Blocks: 472135
We want bug 472135 to land for 1.9.1 but that bug really needs this one.
Flags: blocking1.9.1?
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P2
Oops, I should have landed this tonight, but I missed it. Maybe tomorrow :-)
Keywords: checkin-needed
Whiteboard: [needs landing]
Pushed to trunk: http://hg.mozilla.org/mozilla-central/rev/75657a88c063

Not sure whether we should take it on 1.9.1. Robert, what do you think? Risk is super-low, but the bug probably isn't a big deal.
Status: NEW → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
Oh, I marked it blocking, I guess we may as well take it then :-).
Keywords: checkin-needed
Whiteboard: [needs 191 landing]
That push included Jesse's crashtest.
Flags: in-testsuite+
verified FIXED (no assertions) on debug builds:

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090608 Shiretoko/3.5pre ID:20090608122057

and

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090608 Minefield/3.6a1pre ID:20090608122028
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: