Bug 475193. Only SVG frames should have marker properties. r+sr=roc

--HG--
extra : rebase_source : 51d78172315ec66bf8f5be9bb4afd00ec086b12f